--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,8 @@
 				<div class="container">
 				    <div class="nav-wrapper">
 				      <a class="button-collapse show-on-large" data-activates="slide-out" data-turbolinks="false" href="#" id="sidenav"><i class="material-icons right">apps</i></a>
-				      <a class="brand-logo" href="http://localhost:3000/" id="logo-container"><img height="60" src="http://materialize.labs.my/rails-logo.svg" style="fill: white !important;" width="112"></a>
+
+				      <a class="brand-logo" href="index/home" id="logo-container"><img height="60" src="http://materialize.labs.my/rails-logo.svg" style="fill: white !important;" width="112"></a>
 				      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
 				      <ul class="right hide-on-med-and-down">
 				        <li><a class="waves-effect waves-light" href="/css">css</a></li>
